[gd_scene load_steps=4 format=3 uid="uid://ceditor123"]

[ext_resource type="Script" uid="uid://bjjcojnhrtymv" path="res://scripts/EditorScene.gd" id="1_editor"]
[ext_resource type="Script" uid="uid://cvyrw268l5quc" path="res://scripts/Board.gd" id="2_board"]
[ext_resource type="Texture2D" uid="uid://dqfun2usfj3ti" path="res://art/cube_top.png" id="3_cube"]

[node name="EditorScene" type="Node2D"]
script = ExtResource("1_editor")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="Board" type="Node2D" parent="."]
script = ExtResource("2_board")
rows = 7
cube_texture = ExtResource("3_cube")

[node name="Cubes" type="Node2D" parent="Board"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(540, 400)
zoom = Vector2(1.2, 1.2)

[node name="EditorUI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="EditorUI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 600.0

[node name="VBox" type="VBoxContainer" parent="EditorUI/Panel"]
offset_left = 10.0
offset_top = 10.0
offset_right = 290.0
offset_bottom = 580.0

[node name="Title" type="Label" parent="EditorUI/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üé® Level Editor"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="EditorUI/Panel/VBox"]
layout_mode = 2

[node name="ToolLabel" type="Label" parent="EditorUI/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Tool: Paint Tile"

[node name="ToolsLabel" type="Label" parent="EditorUI/Panel/VBox"]
layout_mode = 2
text = "Keys: 0-4 to change tool
0: Erase | 1: Paint | 2: Spawn
3: Enemy Patrol | 4: Enemy Random
E: Toggle enemy type | S: Spawn"

[node name="Separator2" type="HSeparator" parent="EditorUI/Panel/VBox"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="EditorUI/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Tiles: 0 | Enemies: 0 | Spawn: ‚ùå"

[node name="ValidationLabel" type="Label" parent="EditorUI/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "‚ùå No tiles"

[node name="Separator3" type="HSeparator" parent="EditorUI/Panel/VBox"]
layout_mode = 2

[node name="LevelNameLabel" type="Label" parent="EditorUI/Panel/VBox"]
layout_mode = 2
text = "Level Name:"

[node name="LevelNameInput" type="LineEdit" parent="EditorUI/Panel/VBox"]
layout_mode = 2
placeholder_text = "My Level"

[node name="RowsLabel" type="Label" parent="EditorUI/Panel/VBox"]
layout_mode = 2
text = "Rows (3-10):"

[node name="RowsSpinBox" type="SpinBox" parent="EditorUI/Panel/VBox"]
layout_mode = 2
min_value = 3.0
max_value = 10.0
value = 7.0

[node name="Separator4" type="HSeparator" parent="EditorUI/Panel/VBox"]
layout_mode = 2

[node name="NewButton" type="Button" parent="EditorUI/Panel/VBox"]
layout_mode = 2
text = "üÜï New Level"

[node name="TestButton" type="Button" parent="EditorUI/Panel/VBox"]
layout_mode = 2
text = "‚ñ∂Ô∏è Test Level"

[node name="ExportButton" type="Button" parent="EditorUI/Panel/VBox"]
layout_mode = 2
text = "üì§ Export (Copy)"

[node name="ImportButton" type="Button" parent="EditorUI/Panel/VBox"]
layout_mode = 2
text = "üì• Import (Paste)"

[node name="ExportLabel" type="Label" parent="EditorUI/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
text = ""
horizontal_alignment = 1

[node name="Separator5" type="HSeparator" parent="EditorUI/Panel/VBox"]
layout_mode = 2

[node name="HelpLabel" type="Label" parent="EditorUI/Panel/VBox"]
layout_mode = 2
text = "Controls:
‚Ä¢ Click/Drag to paint
‚Ä¢ Right-click drag to move camera
‚Ä¢ Number keys to change tool"

[node name="BackButton" type="Button" parent="EditorUI"]
offset_left = 20.0
offset_top = 620.0
offset_right = 320.0
offset_bottom = 660.0
text = "‚¨ÖÔ∏è Back to Menu"

[connection signal="text_changed" from="EditorUI/Panel/VBox/LevelNameInput" to="." method="_on_level_name_changed"]
[connection signal="value_changed" from="EditorUI/Panel/VBox/RowsSpinBox" to="." method="_on_rows_changed"]
[connection signal="pressed" from="EditorUI/Panel/VBox/NewButton" to="." method="_on_new_level_pressed"]
[connection signal="pressed" from="EditorUI/Panel/VBox/TestButton" to="." method="_on_test_level_pressed"]
[connection signal="pressed" from="EditorUI/Panel/VBox/ExportButton" to="." method="_on_export_pressed"]
[connection signal="pressed" from="EditorUI/Panel/VBox/ImportButton" to="." method="_on_import_pressed"]
[connection signal="pressed" from="EditorUI/BackButton" to="." method="_on_back_button_pressed"]
